--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Coldmechanics GameJam</title>
-    <link rel="stylesheet" href="css.css" media="all">
+    <link href="css.css" media="all" rel="stylesheet">
 </head>
 <body>
 <header>
     <nav>
-        <a href="index.html" class="active">Accueil</a>
-        <a href="https:///coldmechanics.com" target="_blank" about="Naviguer vers le site web (en anglais)">Site web</a>
+        <a class="active" href="index.html">Accueil</a>
+        <a about="Naviguer vers le site web (en anglais)" href="https:///coldmechanics.com" target="_blank">Site web</a>
     </nav>
 </header>
 <div class="section1">
@@ -18,32 +18,130 @@
     <article class="back">
         <div class="presentation">
             <h1>Game Jam</h1>
-            <em>16 mai au 13 juin 2020</em>
-            <p>Cette première édition du Game Jam se déroulera sur quatre semaines, du 16 mai 2020 au 13 juin 2020.  Le thème du jeu à concevoir lors de ce Game Jam est « Contre les règles ».   Il devra être conçu à l’aide de l’engin de jeu <a href="https://godotengine.org/" target="_blank">Godot</a>.</p>
+            <em class="text-large">16 mai au 13 juin 2020</em>
+            <p>Cette première édition du Game Jam se déroulera sur quatre semaines, du 16 mai 2020 au 13 juin 2020. Le thème du jeu à concevoir lors de ce Game Jam est « Contre les règles ». Il devra être conçu à l’aide de l’engin de jeu <a href="https://godotengine.org/" target="_blank">Godot</a>.</p>
             <p>Tout genre de jeu peut être conçu lors de cet événement. Les équipes restent propriétaires de leur jeu, mais ce qui va avoir été complété durant le Game Jam doit être public. Ce qui est fait par la suite du Game Jam peut être privé selon le bon vouloir de l’équipe propriétaire.</p>
-            <a href="GameJam_mai-juin.pdf" about="Télécharger le PDF de présentation du Game Jam courrant." class="button">Télécharger le PDF de présentation</a>
+            <a about="Télécharger le PDF de présentation du Game Jam courrant." class="button"  href="GameJam_mai-juin.pdf">Télécharger le PDF de présentation</a>
         </div>
     </article>
 </div>
-<div class="section2">
-    <div class="presentation">
-        <p>L’événement est gratuit!</p>
-        <p>Il n’y a pas de prix de participation ou de gagnant.</p>
-        <p>Vous participez pour vous amuser!</p>
+<div class="section2 container">
+    <div class="half presentation">
+        <p class="text-large">L’événement est gratuit!</p>
+        <p class="text-large">Il n’y a pas de prix de participation ou de gagnant.</p>
+        <p class="text-large">Vous participez pour vous amuser!</p>
     </div>
-    <div class="picture"></div>
+    <div class="half picture"></div>
 </div>
 <div class="section3">
-
+    <h2>3 événements<br/>3 engins<br/>12 semaines</h2>
+    <br/>
+    <br/>
+    <div class="container-stretch">
+        <div class="engine">
+            <div class="engine-header">
+                <h3>Godot</h3>
+            </div>
+            <div class="engine-logo" style="background: url('godot_logo.svg') center center no-repeat;">
+            </div>
+            <div class="engine-text">
+                <p>Réalisez un jeu dans l'engin Godot, sur le thème: <em>Contre les règles</em></p>
+            </div>
+            <a about="S'enregistrer au Game Jam sur Godot" class="engine-bottom" href="mailto:gamejam@coldmechanics.com?subject=Inscription%20Game%20Jam%20Godot" target="_blank">S'inscrire</a>
+        </div>
+        <div class="engine">
+            <div class="engine-header">
+                <h3>GameMaker Studio</h3>
+            </div>
+            <div class="engine-logo" style="background: url('gamemaker_logo.svg') center center no-repeat;">
+            </div>
+            <div class="engine-text">
+                <p>Réalisez un jeu dans l'engin GameMaker Studio, sur un thème dévoilé le 13 juin 2020!</p>
+            </div>
+            <a about="S'enregistrer au Game Jam sur GameMaker Studio" class="engine-bottom" href="mailto:gamejam@coldmechanics.com?subject=Inscription%20Game%20Jam%20GameMaker%20Studio" target="_blank">S'inscrire</a>
+        </div>
+        <div class="engine">
+            <div class="engine-header">
+                <h3>Unreal Engine</h3>
+            </div>
+            <div class="engine-logo" style="background: url('unreal_logo.svg') center center no-repeat;">
+            </div>
+            <div class="engine-text">
+                <p>Réalisez un jeu dans l'engin Unreal Engine, sur un thème dévoilé le 11 juillet 2020!</p>
+            </div>
+            <a about="S'enregistrer au Game Jam sur Unreal Engine" class="engine-bottom" href="mailto:gamejam@coldmechanics.com?subject=Inscription%20Game%20Jam%20Unreal%20Engine" target="_blank">S'inscrire</a>
+        </div>
+    </div>
 </div>
 <div class="section4">
-
+    <article class="container">
+        <div class="full">
+            <h2>Règles</h2>
+            <h3>Événements</h3>
+            <ol>
+                <li>Un événement s’étalonne sur 4 semaines.</li>
+                <li>Chaque équipe doit concevoir un jeu vidéo suivant le thème et l'engin du Game Jam. </li>
+                <li>Une personne extérieure au Game Jam doit vérifier que le jeu remplit le thème.</li>
+                <li>
+                    Un temps de 36 heures peut être mis par un participant durant un Game Jam, les détails de la séparation de ce temps se trouvent dans la section Implication.
+                    <ol>
+                        <li>Le temps mis par chaque membre doit être enregistré par ce même membre.</li>
+                    </ol>
+                </li>
+                <li>
+                    Une équipe doit contenir de 1 à 5 membres.
+                    <ol>
+                        <li>Un même membre ne peut être dans plusieurs équipes. </li>
+                    </ol>
+                </li>
+                <li>Au minimum une partie du jeu doit être un Défi personnel.</li>
+                <li>
+                    Tout le contenu du jeu doit être réalisé dans le cadre du Game Jam.
+                    <ol>
+                        <li>Des « assets » externes ne peuvent pas être utilisé pour le jeu.</li>
+                    </ol>
+                </li>
+                <li>Le jeu doit être publié en « open source »/public sur GitHub. </li>
+                <li>
+                    Une démo et une présentation doivent être faites à la fin du jeu.
+                    <ol>
+                        <li>La démo doit contenir une explication de comment le jeu répond au thème. </li>
+                        <li>Dois contenir une démo jouable. </li>
+                        <li>Dois contenir une bande-annonce de 15 secondes. /li>
+                    </ol>
+                </li>
+                <li>Le jeu doit avoir un menu et un niveau jouable.</li>
+            </ol>
+            <h3>Implication</h3>
+            <ol>
+                <li>Minimum 5 heures de temps à mettre durant le Game Jam.</li>
+                <li>Maximum 5 heures peuvent être faites seules, le reste du temps doivent être faites avec au minimum un autre membre de l’équipe.</li>
+                <li>Une réunion de travail compte. </li>
+                <li>La formation compte comme moitié. Donc 2 heures de formation comptent comme 1 heure de travail.</li>
+                <li>Rechercher sur internet de compte-pas comme de la formation, mais comme du travail. </li>
+                <li>Un seul des membres ne peut avoir plus de la moitié des heures totales de l’équipe.</li>
+            </ol>
+            <h3>Défi personnel</h3>
+            <ol>
+                <li>Section que chaque membre doit aborder avec son approche personnelle.</li>
+                <li>Dois être présent dans le jeu “final”.</li>
+            </ol>
+        </div>
+    </article>
 </div>
 <div class="section5">
-
+    <article class="container">
+        <div class="full">
+            <p class="text-medium">Vous voulez vous inscrire à l'un des événements?</p>
+            <br/>
+            <p class="text-medium">Envoyez un courriel à l'adresse <a href="mailto:gamejam.coldmechanics.com">gamejam.coldmechanics.com</a> et spécifiez dans le titre au(x) quel(s) Game Jam vous souhaitez participer.</p>
+            <br/>
+            <p class="text-medium">Les inscriptions à un événement sont acceptées jusqu'à la dernière semaine de celui-ci.</p>
+        </div>
+    </article>
 </div>
 <footer>
-
+    © 2020 ColdMechanics
 </footer>
 </body>
 </html>
