--- a/index.html
+++ b/index.html
@@ -146,4 +146,25 @@
     © 2020 ColdMechanics
 </footer>
 </body>
+<script>
+    function check_webp_feature(callback) {
+        var lossy = "UklGRiIAAABXRUJQVlA4IBYAAAAwAQCdASoBAAEADsD+JaQAA3AAAAAA";
+
+        var img = new Image();
+        img.onload = function () {
+            var result = (img.width > 0) && (img.height > 0);
+            callback(result);
+        };
+        img.onerror = function () {
+            callback(false);
+        };
+        img.src = "data:image/webp;base64," + lossy;
+    }
+    
+    check_webp_feature(function (supportWebp) {
+        if (!supportWebp) {
+            document.getElementsByName('body')[0].classList.add(".no-webp");
+        }
+    });
+</script>
 </html>
