Fix typos, remove invisible characters and fix HTML

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Coldmechanics GameJam</title>
+    <title>ColdMechanics GameJam</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -11,7 +11,7 @@
 <header>
     <nav>
         <a class="active" href="index.html">Accueil</a>
-        <a about="Naviguer vers le site web (en anglais)" href="https:///coldmechanics.com" target="_blank">Site web</a>
+        <a about="Naviguer vers le site web (en anglais)" href="https://coldmechanics.com" target="_blank">Site web</a>
     </nav>
 </header>
 <div class="section1">
@@ -21,9 +21,9 @@
         <div class="presentation">
             <h1>Game Jam</h1>
             <em class="text-large">16 mai au 13 juin 2020</em>
-            <p>Cette première édition du Game Jam se déroulera sur quatre semaines, du 16 mai 2020 au 13 juin 2020. Le thème du jeu à concevoir lors de ce Game Jam est « Contre les règles ». Il devra être conçu à l’aide de l’engin de jeu <a href="https://godotengine.org/" target="_blank">Godot</a>.</p>
-            <p>Tout genre de jeu peut être conçu lors de cet événement. Les équipes restent propriétaires de leur jeu, mais ce qui va avoir été complété durant le Game Jam doit être public. Ce qui est fait par la suite du Game Jam peut être privé selon le bon vouloir de l’équipe propriétaire.</p>
-            <a about="Télécharger le PDF de présentation du Game Jam courrant." class="button"  href="GameJam_mai-juin.pdf">Télécharger le PDF de présentation</a>
+            <p>Cette première édition du Game Jam se déroulera sur quatre semaines, du 16 mai 2020 au 13 juin 2020. Le thème du jeu à concevoir lors de ce Game Jam est « Contre les règles ». Il devra être conçu à l’aide de l’engin de jeu <a href="https://godotengine.org/" target="_blank">Godot</a>.</p>
+            <p>Tout genre de jeu peut être conçu lors de cet événement. Les équipes restent propriétaires de leur jeu, mais ce qui va avoir été complété durant le Game Jam doit être public. Ce qui est fait par la suite du Game Jam peut être privé selon le bon vouloir de l’équipe propriétaire.</p>
+            <a about="Télécharger le PDF de présentation du Game Jam courant." class="button"  href="GameJam_mai-juin.pdf">Télécharger le PDF de présentation</a>
         </div>
     </article>
 </div>
@@ -82,7 +82,7 @@
             <h3>Événements</h3>
             <ol>
                 <li>Un événement s’étalonne sur 4 semaines.</li>
-                <li>Chaque équipe doit concevoir un jeu vidéo suivant le thème et l'engin du Game Jam. </li>
+                <li>Chaque équipe doit concevoir un jeu vidéo suivant le thème et l'engin du Game Jam.</li>
                 <li>Une personne extérieure au Game Jam doit vérifier que le jeu remplit le thème.</li>
                 <li>
                     Un temps de 36 heures peut être mis par un participant durant un Game Jam, les détails de la séparation de ce temps se trouvent dans la section Implication.
@@ -93,7 +93,7 @@
                 <li>
                     Une équipe doit contenir de 1 à 5 membres.
                     <ol>
-                        <li>Un même membre ne peut être dans plusieurs équipes. </li>
+                        <li>Un même membre ne peut être dans plusieurs équipes.</li>
                     </ol>
                 </li>
                 <li>Au minimum une partie du jeu doit être un Défi personnel.</li>
@@ -103,13 +103,13 @@
                         <li>Des « assets » externes ne peuvent pas être utilisé pour le jeu.</li>
                     </ol>
                 </li>
-                <li>Le jeu doit être publié en « open source »/public sur GitHub. </li>
+                <li>Le jeu doit être publié en « open source »/public sur GitHub.</li>
                 <li>
-                    Une démo et une présentation doivent être faites à la fin du jeu.
+                    Une démonstration et une présentation doivent être faites à la fin du jeu.
                     <ol>
-                        <li>La démo doit contenir une explication de comment le jeu répond au thème. </li>
-                        <li>Dois contenir une démo jouable. </li>
-                        <li>Dois contenir une bande-annonce de 15 secondes. /li>
+                        <li>La démonstration doit contenir une explication de comment le jeu répond au thème.</li>
+                        <li>Dois contenir une démonstration jouable.</li>
+                        <li>Dois contenir une bande-annonce de 15 secondes.</li>
                     </ol>
                 </li>
                 <li>Le jeu doit avoir un menu et un niveau jouable.</li>
@@ -118,9 +118,9 @@
             <ol>
                 <li>Minimum 5 heures de temps à mettre durant le Game Jam.</li>
                 <li>Maximum 5 heures peuvent être faites seules, le reste du temps doivent être faites avec au minimum un autre membre de l’équipe.</li>
-                <li>Une réunion de travail compte. </li>
+                <li>Une réunion de travail compte.</li>
                 <li>La formation compte comme moitié. Donc 2 heures de formation comptent comme 1 heure de travail.</li>
-                <li>Rechercher sur internet de compte-pas comme de la formation, mais comme du travail. </li>
+                <li>Rechercher sur internet de compte-pas comme de la formation, mais comme du travail.</li>
                 <li>Un seul des membres ne peut avoir plus de la moitié des heures totales de l’équipe.</li>
             </ol>
             <h3>Défi personnel</h3>
