--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <article class="back">
         <div class="presentation">
             <h1>Game Jam</h1>
-            <em class="text-large">13 juin au 11 juillet 2020</em>
-            <p>Cette seconde édition du Game Jam se déroulera sur quatre semaines, du 13 juin 2020 au 11 juillet 2020. Le thème du jeu à concevoir lors de ce Game Jam est « Assemblage Requis ». Il devra être conçu à l’aide de l’engin de jeu <a href="https://www.yoyogames.com/gamemaker" target="_blank">GameMaker Studio 2</a>.</p>
+            <em class="text-large">11 juillet au 8 août 2020</em>
+            <p>Cette seconde édition du Game Jam se déroulera sur quatre semaines, du 11 juillet 2020 au 8 août 2020. Le thème du jeu à concevoir lors de ce Game Jam est «&nbsp;Chasseur / Chassé&nbsp;». Il devra être conçu à l’aide de l’engin de jeu <a href="https://www.unrealengine.com/en-US/" target="_blank">Unreal Engine 4</a>.</p>
             <p>Tout genre de jeu peut être conçu lors de cet événement. Les équipes restent propriétaires de leur jeu, mais ce qui va avoir été complété durant le Game Jam doit être public. Ce qui est fait par la suite du Game Jam peut être privé selon le bon vouloir de l’équipe propriétaire.</p>
-            <a about="Télécharger le PDF de présentation du Game Jam courant." class="button"  href="GameJam_juin-juillet.pdf">Télécharger le PDF de présentation</a>
+            <a about="Télécharger le PDF de présentation du Game Jam courant." class="button"  href="GameJam_juillet_aout.pdf">Télécharger le PDF de présentation</a>
         </div>
     </article>
 </div>
@@ -51,7 +51,7 @@
             </div>
             <p class="engine-bottom" >Complété</p>
         </div>
-        <div class="engine">
+        <div class="engine complete">
             <div class="engine-header">
                 <h3>GameMaker Studio</h3>
             </div>
@@ -69,7 +69,7 @@
             <div class="engine-logo" style="background: url('unreal_logo.svg') center center no-repeat;">
             </div>
             <div class="engine-text">
-                <p>Réalisez un jeu dans l'engin Unreal Engine, sur un thème dévoilé le 11 juillet 2020!</p>
+                <p>Réalisez un jeu dans l'engin Unreal Engine, sur le thème: <em>Chasseur / Chassé</em></p>
             </div>
             <a about="S'enregistrer au Game Jam sur Unreal Engine" class="engine-bottom" href="mailto:gamejam@coldmechanics.com?subject=Inscription%20Game%20Jam%20Unreal%20Engine" target="_blank">S'inscrire</a>
         </div>
